--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 00:05:06 2018</p>
+         Last Run: Fri Nov 23 01:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -30,7 +30,7 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
                         <td>5</td>
@@ -38,19 +38,19 @@
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>79</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-2</td>
-                        <td>-5</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>5</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>66</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>53</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>43</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -103,7 +103,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-5",
+                 "-4",
                  "-4",
                  "-4"
                ]
@@ -116,7 +116,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-2",
+                 "-1",
                  "-1",
                  "-1"
                ]
@@ -189,7 +189,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "75",
+                 "74",
                  "71",
                  "72"
                ]
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
-                 "66",
-                 "53",
-                 "43"
+                 "80",
+                 "68",
+                 "55",
+                 "45"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 00:05:06 2018</p>
+         Last Run: Fri Nov 23 01:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -264,39 +264,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>0</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>59</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>35</td>
+                        <td>W</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>1</td>
-                        <td>-2</td>
+                        <td>-1</td>
                         <td>2</td>
-                        <td>57</td>
+                        <td>55</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
-                        <td>36</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>57</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>38</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -324,7 +324,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "-2",
+                 "-1",
                  "0"
                ]
              },
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
-                 "57",
-                 "57"
+                 "58",
+                 "55",
+                 "55"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "35",
-                 "36",
-                 "38"
+                 "28",
+                 "24",
+                 "25"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 00:05:06 2018</p>
+         Last Run: Fri Nov 23 01:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -479,7 +479,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
@@ -487,31 +487,31 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>65</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>76</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>6</td>
-                        <td>86</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>4</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>83</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -540,7 +540,7 @@
                "data":[
                  "-6",
                  "-6",
-                 "-6"
+                 "-7"
                ]
              },
              {
@@ -552,7 +552,7 @@
                "data":[
                  "-2",
                  "-2",
-                 "-2"
+                 "-3"
                ]
              }
            ]
@@ -610,8 +610,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "10",
-                 "6"
+                 "11",
+                 "4"
                ]
              },
              {
@@ -622,7 +622,7 @@
                "data":[
                  "78",
                  "81",
-                 "86"
+                 "84"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "76",
-                 "83"
+                 "92",
+                 "92",
+                 "90"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 00:05:06 2018</p>
+         Last Run: Fri Nov 23 01:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-1</td>
-                        <td>-4</td>
-                        <td>7</td>
+                        <td>-3</td>
+                        <td>6</td>
                         <td>82</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
-                        <td>58</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-2</td>
-                        <td>-5</td>
-                        <td>7</td>
+                        <td>-4</td>
+                        <td>6</td>
                         <td>84</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
-                        <td>56</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-2</td>
                         <td>-4</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>85</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>54</td>
+                        <td>28</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,8 +753,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-3",
                  "-4",
-                 "-5",
                  "-4"
                ]
              },
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
-                 "7"
+                 "6",
+                 "6",
+                 "6"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "56",
-                 "54"
+                 "27",
+                 "27",
+                 "28"
                ]
              }
            ]
