--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 02:05:06 2018</p>
+         Last Run: Fri Nov 23 03:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>6</td>
-                        <td>79</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>78</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -50,31 +50,31 @@
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>69</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>5</td>
-                        <td>68</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>S</td>
-                        <td>61</td>
-                     </tr>
-                     <tr>
-                        <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>8</td>
+                        <td>S</td>
+                        <td>58</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>5</td>
+                        <td>70</td>
+                        <td>0</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>52</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -105,7 +105,7 @@
                  "-5",
                  "-4",
                  "-3",
-                 "-3"
+                 "-4"
                ]
              },
              {
@@ -118,7 +118,7 @@
                  "-2",
                  "-1",
                  "0",
-                 "0"
+                 "-1"
                ]
              }
            ]
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
+                 "80",
                  "72",
-                 "68",
-                 "71"
+                 "69",
+                 "70"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "69",
-                 "61",
-                 "52"
+                 "77",
+                 "67",
+                 "58",
+                 "48"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 02:05:06 2018</p>
+         Last Run: Fri Nov 23 03:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -265,8 +265,8 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-2</td>
+                        <td>1</td>
+                        <td>-1</td>
                         <td>2</td>
                         <td>58</td>
                         <td>1</td>
@@ -277,14 +277,14 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-1</td>
                         <td>2</td>
-                        <td>55</td>
+                        <td>0</td>
+                        <td>2</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>24</td>
+                        <td>W</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -292,11 +292,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>25</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -323,8 +323,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
                  "-1",
+                 "0",
                  "0"
                ]
              },
@@ -335,8 +335,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
                  "1",
+                 "2",
                  "2"
                ]
              }
@@ -406,8 +406,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "58",
-                 "55",
-                 "55"
+                 "56",
+                 "56"
                ]
              },
              {
@@ -417,8 +417,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "28",
-                 "24",
-                 "25"
+                 "23",
+                 "22"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 02:05:06 2018</p>
+         Last Run: Fri Nov 23 03:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,23 +483,23 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>79</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>92</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>11</td>
-                        <td>82</td>
+                        <td>5</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>92</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -510,7 +510,7 @@
                         <td>85</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
+                        <td>S</td>
                         <td>90</td>
                      </tr>
                   </tbody>
@@ -610,7 +610,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "11",
+                 "5",
                  "4"
                ]
              },
@@ -620,8 +620,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "82",
+                 "80",
+                 "81",
                  "85"
                ]
              },
@@ -631,8 +631,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "92",
-                 "92",
+                 "91",
+                 "91",
                  "90"
                ]
              }
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 02:05:06 2018</p>
+         Last Run: Fri Nov 23 03:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -710,7 +710,7 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>84</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -722,10 +722,10 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>85</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>28</td>
                      </tr>
                   </tbody>
@@ -836,8 +836,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "84",
-                 "85"
+                 "83",
+                 "86"
                ]
              },
              {
