--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 03:05:07 2018</p>
+         Last Run: Fri Nov 23 04:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>6</td>
-                        <td>80</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>77</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>67</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>58</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>48</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
+                 "79",
                  "72",
                  "69",
-                 "70"
+                 "71"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "77",
-                 "67",
-                 "58",
-                 "48"
+                 "76",
+                 "66",
+                 "56",
+                 "47"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 03:05:07 2018</p>
+         Last Run: Fri Nov 23 04:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -265,26 +265,26 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-1</td>
+                        <td>0</td>
+                        <td>-2</td>
                         <td>2</td>
                         <td>58</td>
                         <td>1</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>28</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
+                        <td>1</td>
+                        <td>-1</td>
                         <td>2</td>
-                        <td>0</td>
-                        <td>2</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>W</td>
-                        <td>23</td>
+                        <td>WSW</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -296,7 +296,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -323,8 +323,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-2",
                  "-1",
-                 "0",
                  "0"
                ]
              },
@@ -335,8 +335,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "0",
                  "1",
-                 "2",
                  "2"
                ]
              }
@@ -406,7 +406,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "58",
-                 "56",
+                 "57",
                  "56"
                ]
              },
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "23",
-                 "22"
+                 "27",
+                 "22",
+                 "23"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 03:05:07 2018</p>
+         Last Run: Fri Nov 23 04:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,7 +483,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>80</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
@@ -494,12 +494,12 @@
                         <td>Overcast</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>5</td>
-                        <td>81</td>
+                        <td>11</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>91</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -507,10 +507,10 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>85</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>S</td>
+                        <td>SSW</td>
                         <td>90</td>
                      </tr>
                   </tbody>
@@ -610,7 +610,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "5",
+                 "11",
                  "4"
                ]
              },
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "81",
-                 "85"
+                 "79",
+                 "82",
+                 "86"
                ]
              },
              {
@@ -632,7 +632,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "91",
-                 "91",
+                 "92",
                  "90"
                ]
              }
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 03:05:07 2018</p>
+         Last Run: Fri Nov 23 04:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -710,7 +710,7 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>83</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -836,7 +836,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "83",
+                 "84",
                  "86"
                ]
              },
